extended layer visualisation
added different cost functions (msssim not working)
