# flask_server/swagger_server/models/parameter_list.py
@@ -1,9 +1,10 @@
 # coding: utf-8
 
 from __future__ import absolute_import
+
+from typing import List
+
 from .base_model_ import Model
-from datetime import date, datetime
-from typing import List, Dict
 from ..util import deserialize_model
 
 
@@ -12,7 +13,26 @@ class ParameterList(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, input_shape: List[List[int]]=None, number_of_stacks: List[List[int]]=None, filter_sizes: List[List[int]]=None, mirror_weights: List[bool]=None, activation_function: List[str]=None, batch_size: List[int]=None, n_epochs: List[int]=None, use_tensorboard: bool=None, verbose: bool=None, learning_rate_function: List[str]=None, lr_initial_learning_rate: List[float]=None, lr_decay_steps: List[int]=None, lr_decay_rate: List[float]=None, lr_staircase: List[bool]=None, lr_boundaries: List[List[int]]=None, lr_values: List[List[float]]=None, lr_end_learning_rate: List[float]=None, lr_power: List[float]=None, lr_cycle: List[bool]=None, optimizer: List[str]=None, momentum: List[float]=None, random_function_for_weights: List[str]=None, rw_alpha: List[float]=None, rw_beta: List[float]=None, rw_mean: List[float]=None, rw_stddev: List[float]=None, rw_lam: List[float]=None, rw_minval: List[float]=None, rw_maxval: List[float]=None, rw_seed: List[int]=None, random_function_for_biases: List[str]=None, rb_alpha: List[float]=None, rb_beta: List[float]=None, rb_mean: List[float]=None, rb_stddev: List[float]=None, rb_lam: List[float]=None, rb_minval: List[float]=None, rb_maxval: List[float]=None, rb_seed: List[int]=None, session_saver_path: str=None, load_prev_session: bool=None, session_save_duration: List[int]=None, num_test_pictures: List[int]=None):
+
+    def __init__(self, input_shape: List[List[int]] = None, number_of_stacks: List[List[int]] = None,
+                 filter_sizes: List[List[int]] = None, mirror_weights: List[bool] = None,
+                 activation_function: List[str] = None, batch_size: List[int] = None, n_epochs: List[int] = None,
+                 use_tensorboard: bool = None, verbose: bool = None, learning_rate_function: List[str] = None,
+                 lr_initial_learning_rate: List[float] = None, lr_decay_steps: List[int] = None,
+                 lr_decay_rate: List[float] = None, lr_staircase: List[bool] = None,
+                 lr_boundaries: List[List[int]] = None, lr_values: List[List[float]] = None,
+                 lr_end_learning_rate: List[float] = None, lr_power: List[float] = None, lr_cycle: List[bool] = None,
+                 cf_cost_function: List[str] = None, cf_max_val: List[float] = None, cf_filter_size: List[float] = None,
+                 cf_filter_sigma: List[float] = None, cf_k1: List[float] = None, cf_k2: List[float] = None,
+                 cf_weights: List[List[float]] = None, optimizer: List[str] = None, momentum: List[float] = None,
+                 random_function_for_weights: List[str] = None, rw_alpha: List[float] = None,
+                 rw_beta: List[float] = None, rw_mean: List[float] = None, rw_stddev: List[float] = None,
+                 rw_lam: List[float] = None, rw_minval: List[float] = None, rw_maxval: List[float] = None,
+                 rw_seed: List[int] = None, random_function_for_biases: List[str] = None, rb_alpha: List[float] = None,
+                 rb_beta: List[float] = None, rb_mean: List[float] = None, rb_stddev: List[float] = None,
+                 rb_lam: List[float] = None, rb_minval: List[float] = None, rb_maxval: List[float] = None,
+                 rb_seed: List[int] = None, session_saver_path: str = None, load_prev_session: bool = None,
+                 session_save_duration: List[int] = None, num_test_pictures: List[int] = None):
         """
         ParameterList - a model defined in Swagger
 
@@ -54,6 +74,20 @@ class ParameterList(Model):
         :type lr_power: List[float]
         :param lr_cycle: The lr_cycle of this ParameterList.
         :type lr_cycle: List[bool]
+        :param cf_cost_function: The cf_cost_function of this ParameterList.
+        :type cf_cost_function: List[str]
+        :param cf_max_val: The cf_max_val of this ParameterList.
+        :type cf_max_val: List[float]
+        :param cf_filter_size: The cf_filter_size of this ParameterList.
+        :type cf_filter_size: List[float]
+        :param cf_filter_sigma: The cf_filter_sigma of this ParameterList.
+        :type cf_filter_sigma: List[float]
+        :param cf_k1: The cf_k1 of this ParameterList.
+        :type cf_k1: List[float]
+        :param cf_k2: The cf_k2 of this ParameterList.
+        :type cf_k2: List[float]
+        :param cf_weights: The cf_weights of this ParameterList.
+        :type cf_weights: List[List[float]]
         :param optimizer: The optimizer of this ParameterList.
         :type optimizer: List[str]
         :param momentum: The momentum of this ParameterList.
@@ -123,6 +157,13 @@ class ParameterList(Model):
             'lr_end_learning_rate': List[float],
             'lr_power': List[float],
             'lr_cycle': List[bool],
+            'cf_cost_function': List[str],
+            'cf_max_val': List[float],
+            'cf_filter_size': List[float],
+            'cf_filter_sigma': List[float],
+            'cf_k1': List[float],
+            'cf_k2': List[float],
+            'cf_weights': List[List[float]],
             'optimizer': List[str],
             'momentum': List[float],
             'random_function_for_weights': List[str],
@@ -169,6 +210,13 @@ class ParameterList(Model):
             'lr_end_learning_rate': 'lr_end_learning_rate',
             'lr_power': 'lr_power',
             'lr_cycle': 'lr_cycle',
+            'cf_cost_function': 'cf_cost_function',
+            'cf_max_val': 'cf_max_val',
+            'cf_filter_size': 'cf_filter_size',
+            'cf_filter_sigma': 'cf_filter_sigma',
+            'cf_k1': 'cf_k1',
+            'cf_k2': 'cf_k2',
+            'cf_weights': 'cf_weights',
             'optimizer': 'optimizer',
             'momentum': 'momentum',
             'random_function_for_weights': 'random_function_for_weights',
@@ -214,6 +262,13 @@ class ParameterList(Model):
         self._lr_end_learning_rate = lr_end_learning_rate
         self._lr_power = lr_power
         self._lr_cycle = lr_cycle
+        self._cf_cost_function = cf_cost_function
+        self._cf_max_val = cf_max_val
+        self._cf_filter_size = cf_filter_size
+        self._cf_filter_sigma = cf_filter_sigma
+        self._cf_k1 = cf_k1
+        self._cf_k2 = cf_k2
+        self._cf_weights = cf_weights
         self._optimizer = optimizer
         self._momentum = momentum
         self._random_function_for_weights = random_function_for_weights
@@ -649,6 +704,153 @@ class ParameterList(Model):
         """
 
         self._lr_cycle = lr_cycle
+
+    @property
+    def cf_cost_function(self) -> List[str]:
+        """
+        Gets the cf_cost_function of this ParameterList.
+
+        :return: The cf_cost_function of this ParameterList.
+        :rtype: List[str]
+        """
+        return self._cf_cost_function
+
+    @cf_cost_function.setter
+    def cf_cost_function(self, cf_cost_function: List[str]):
+        """
+        Sets the cf_cost_function of this ParameterList.
+
+        :param cf_cost_function: The cf_cost_function of this ParameterList.
+        :type cf_cost_function: List[str]
+        """
+
+        self._cf_cost_function = cf_cost_function
+
+    @property
+    def cf_max_val(self) -> List[float]:
+        """
+        Gets the cf_max_val of this ParameterList.
+
+        :return: The cf_max_val of this ParameterList.
+        :rtype: List[float]
+        """
+        return self._cf_max_val
+
+    @cf_max_val.setter
+    def cf_max_val(self, cf_max_val: List[float]):
+        """
+        Sets the cf_max_val of this ParameterList.
+
+        :param cf_max_val: The cf_max_val of this ParameterList.
+        :type cf_max_val: List[float]
+        """
+
+        self._cf_max_val = cf_max_val
+
+    @property
+    def cf_filter_size(self) -> List[float]:
+        """
+        Gets the cf_filter_size of this ParameterList.
+
+        :return: The cf_filter_size of this ParameterList.
+        :rtype: List[float]
+        """
+        return self._cf_filter_size
+
+    @cf_filter_size.setter
+    def cf_filter_size(self, cf_filter_size: List[float]):
+        """
+        Sets the cf_filter_size of this ParameterList.
+
+        :param cf_filter_size: The cf_filter_size of this ParameterList.
+        :type cf_filter_size: List[float]
+        """
+
+        self._cf_filter_size = cf_filter_size
+
+    @property
+    def cf_filter_sigma(self) -> List[float]:
+        """
+        Gets the cf_filter_sigma of this ParameterList.
+
+        :return: The cf_filter_sigma of this ParameterList.
+        :rtype: List[float]
+        """
+        return self._cf_filter_sigma
+
+    @cf_filter_sigma.setter
+    def cf_filter_sigma(self, cf_filter_sigma: List[float]):
+        """
+        Sets the cf_filter_sigma of this ParameterList.
+
+        :param cf_filter_sigma: The cf_filter_sigma of this ParameterList.
+        :type cf_filter_sigma: List[float]
+        """
+
+        self._cf_filter_sigma = cf_filter_sigma
+
+    @property
+    def cf_k1(self) -> List[float]:
+        """
+        Gets the cf_k1 of this ParameterList.
+
+        :return: The cf_k1 of this ParameterList.
+        :rtype: List[float]
+        """
+        return self._cf_k1
+
+    @cf_k1.setter
+    def cf_k1(self, cf_k1: List[float]):
+        """
+        Sets the cf_k1 of this ParameterList.
+
+        :param cf_k1: The cf_k1 of this ParameterList.
+        :type cf_k1: List[float]
+        """
+
+        self._cf_k1 = cf_k1
+
+    @property
+    def cf_k2(self) -> List[float]:
+        """
+        Gets the cf_k2 of this ParameterList.
+
+        :return: The cf_k2 of this ParameterList.
+        :rtype: List[float]
+        """
+        return self._cf_k2
+
+    @cf_k2.setter
+    def cf_k2(self, cf_k2: List[float]):
+        """
+        Sets the cf_k2 of this ParameterList.
+
+        :param cf_k2: The cf_k2 of this ParameterList.
+        :type cf_k2: List[float]
+        """
+
+        self._cf_k2 = cf_k2
+
+    @property
+    def cf_weights(self) -> List[List[float]]:
+        """
+        Gets the cf_weights of this ParameterList.
+
+        :return: The cf_weights of this ParameterList.
+        :rtype: List[List[float]]
+        """
+        return self._cf_weights
+
+    @cf_weights.setter
+    def cf_weights(self, cf_weights: List[List[float]]):
+        """
+        Sets the cf_weights of this ParameterList.
+
+        :param cf_weights: The cf_weights of this ParameterList.
+        :type cf_weights: List[List[float]]
+        """
+
+        self._cf_weights = cf_weights
 
     @property
     def optimizer(self) -> List[str]:
